test/ruby/test_range.rb
@@ -604,6 +604,10 @@ class TestRange < Test::Unit::TestCase
     assert_include(0...10, 5)
     assert_include(5..., 10)
     assert_not_include(5..., 0)
+    assert_include(.."z", "z")
+    assert_not_include(..."z", "z")
+    assert_include(..10, 10)
+    assert_not_include(...10, 10)
   end
 
   def test_cover
